Proper use of font encodings for "native" fonts Submitted by: Peter S. Housel (housel@acm.org) and Rainer Garus (rainer.garus@arcor.de)
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194635 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/examples/fo/readme.fo
+++ b/docs/examples/fo/readme.fo
@@ -285,7 +285,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
     <fo:list-block start-indent="1cm" provisional-distance-between-starts="12pt" font-family="serif">
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>root </fo:block>
@@ -293,7 +293,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>layout-master-set </fo:block>
@@ -301,7 +301,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>simple-page-master </fo:block>
@@ -309,7 +309,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>region-body </fo:block>
@@ -317,7 +317,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>region-before </fo:block>
@@ -325,7 +325,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>region-after </fo:block>
@@ -333,7 +333,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-sequence </fo:block>
@@ -341,7 +341,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>sequence-specification </fo:block>
@@ -349,7 +349,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>sequence-specifier-single </fo:block>
@@ -357,7 +357,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>sequence-specifier-repeating </fo:block>
@@ -365,7 +365,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>sequence-specifier-alternating </fo:block>
@@ -373,7 +373,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>flow </fo:block>
@@ -381,7 +381,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>static-content </fo:block>
@@ -389,7 +389,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>block </fo:block>
@@ -397,7 +397,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>list-block </fo:block>
@@ -405,7 +405,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>list-item </fo:block>
@@ -413,7 +413,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>list-item-label </fo:block>
@@ -421,7 +421,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>list-item-body </fo:block>
@@ -429,7 +429,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-number </fo:block>
@@ -437,7 +437,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>display-sequence </fo:block>
@@ -445,7 +445,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>inline </fo:block>
@@ -453,7 +453,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>display-rule </fo:block>
@@ -461,7 +461,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>display-graphic </fo:block>
@@ -469,7 +469,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>table (minimal support)</fo:block>
@@ -477,7 +477,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>table-column (minimal support)</fo:block>
@@ -485,7 +485,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>table-body (minimal support)</fo:block>
@@ -493,7 +493,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>table-row (minimal support)</fo:block>
@@ -501,7 +501,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>table-cell (minimal support)</fo:block>
@@ -515,7 +515,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
     <fo:list-block start-indent="1cm" provisional-distance-between-starts="12pt" font-family="serif">
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>end-indent </fo:block>
@@ -523,7 +523,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-master-name </fo:block>
@@ -531,7 +531,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-master-first </fo:block>
@@ -539,7 +539,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-master-repeating </fo:block>
@@ -547,7 +547,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-master-odd </fo:block>
@@ -555,7 +555,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-master-even </fo:block>
@@ -563,7 +563,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>margin-top (only on pages and regions)</fo:block>
@@ -571,7 +571,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>margin-bottom (only on pages and regions)</fo:block>
@@ -579,7 +579,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>margin-left (only on pages and regions)</fo:block>
@@ -587,7 +587,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>margin-right (only on pages and regions)</fo:block>
@@ -595,7 +595,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>extent </fo:block>
@@ -603,7 +603,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-width </fo:block>
@@ -611,7 +611,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>page-height </fo:block>
@@ -619,7 +619,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>flow-name </fo:block>
@@ -627,7 +627,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>font-family </fo:block>
@@ -635,7 +635,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>font-style </fo:block>
@@ -643,7 +643,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>font-weight </fo:block>
@@ -651,7 +651,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>font-size </fo:block>
@@ -659,7 +659,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>line-height </fo:block>
@@ -667,7 +667,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>text-align </fo:block>
@@ -675,7 +675,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>text-align-last </fo:block>
@@ -683,7 +683,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>space-before.optimum </fo:block>
@@ -691,7 +691,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>space-after.optimum </fo:block>
@@ -699,7 +699,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>start-indent </fo:block>
@@ -707,7 +707,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>end-indent </fo:block>
@@ -715,7 +715,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>provisional-distance-between-starts </fo:block>
@@ -723,7 +723,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>provisional-label-separation </fo:block>
@@ -731,7 +731,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>rule-thickness </fo:block>
@@ -739,7 +739,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>color </fo:block>
@@ -747,7 +747,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>wrap-option </fo:block>
@@ -755,7 +755,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>white-space-treatment </fo:block>
@@ -763,7 +763,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>break-before </fo:block>
@@ -771,7 +771,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>break-after </fo:block>
@@ -779,7 +779,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>text-indent </fo:block>
@@ -787,7 +787,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>href</fo:block>
@@ -795,7 +795,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>column-width</fo:block>
@@ -803,7 +803,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>background-color</fo:block>
@@ -811,7 +811,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>padding-top (only in conjunction with background color)</fo:block>
@@ -819,7 +819,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>padding-left (only in conjunction with background color)</fo:block>
@@ -827,7 +827,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>padding-bottom (only in conjunction with background color)</fo:block>
@@ -835,7 +835,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
       <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>padding-right (only in conjunction with background color)</fo:block>
@@ -1026,7 +1026,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
   <fo:list-block start-indent="1cm" provisional-distance-between-starts="12pt" font-family="serif">
     <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>
@@ -1039,7 +1039,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
     <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>
@@ -1052,7 +1052,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
     <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>
@@ -1065,7 +1065,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
     <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>
@@ -1078,7 +1078,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
     <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>
@@ -1091,7 +1091,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
     <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>
@@ -1104,7 +1104,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
     <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>
@@ -1117,7 +1117,7 @@ This is not the latest Fop documentation, but just an fo example. FOP - p. <fo:p
 </fo:list-item>
     <fo:list-item>
 <fo:list-item-label end-indent="label-end()">
-<fo:block><fo:inline font-family="Symbol">&#183;</fo:inline></fo:block>
+<fo:block><fo:inline font-family="Symbol">&#x2022;</fo:inline></fo:block>
 </fo:list-item-label>
 <fo:list-item-body start-indent="body-start()">
 <fo:block>
