--- a/lib/readme
+++ b/lib/readme
@@ -19,10 +19,6 @@ build.sh -f buildtools.xml in the top level directory.
 stylebook.jar
 Jar used for creating the FOP website
 
-jimi-1.0.jar
-version 1.0
-Jimi is an image library that is used to load images
-
 xerces-1.4.3.jar
 version 1.4.3
 xerces is the xslt stylesheet processor
@@ -33,4 +29,12 @@ loggin library for logging in fop
 
 xalan-2.2D11.jar
 xml processor
+
+*** OPTIONAL ***
+
+jimi-1.0.jar
+May be obtained from http://java.sun.com/products/jimi/.
+Place jimi*.jar in lib/; modify batch/shell script classpaths.
+version 1.0
+Jimi is an image library that is used to load images
 
