--- a/CHANGES
+++ b/CHANGES
@@ -13,9 +13,16 @@ Done since 0.20.2 release
   PDF Renderer (Tore Engvig)
 - fixed bug in TTFReader (unsigned lsb changed to signed) 
   Submitted by: Cristi Ruja, c_ruja@yahoo.com
-- Added Polish Hyphenation based on TeX hypenation
-  Submitted by: Marcin Kuthan [M.Kuthan@elka.pw.edu.pl]
-  
+- fixed threading problem (Keiron Liddle)
+- Formatting results patch to enable embedders to obtain info from render doc
+  Submitted by:	Jeremias Maerki <jeremias.maerki@outline.ch>
+- Better handling of missing markers (Keiron Liddle)
+- jimi.jar removed for removed for license reasons
+- Added "Printing from a servlet" example
+  Submitted by:	Ralph LaChance <Ralph_LaChance@compuserve.com>
+- Proper use of font encodings for "native" fonts
+  Submitted by: Peter S. Housel (housel@acm.org) and Rainer Garus (rainer.garus@arcor.de)
+
 *** Tables
 - Implement the proportional-column-width() function in table-column and
 make it possible to specify table width (or inline-progression-dimension)
@@ -23,14 +30,21 @@ using percentage values. (Karen Lease)
 - Fix a bug causing strange layout when a cell containing a nested table
 was laid out again because another cell in the same row was split (David
 Dixon's example). (Karen Lease)
+- Fix for infinite loops with table keeps (Christian Geisert)
 
 *** Datatypes
 - Rearrange the Length class hierarchy as part of the table-column proportional
 width work. (Karen Lease)
 
+*** Functions
+- make sure label-end() value gets calculated
+  (fix for bug #6094, endless loop while processing list-item-label))
+
 *** Areas
 - Fix BlockArea to account for padding and border when calculating space
 remaining for content. (Karen Lease)
+- Improved line breaking for japanese
+  Submitted by:	Satoshi Ishigami <ishigami@victokai.co.jp>
 
 *** Properties
 - Changed "master-name" to "master-reference" on fo:page-sequence, 
@@ -42,6 +56,9 @@ remaining for content. (Karen Lease)
 - Add support for inline-progression-dimension and table-layout. (Karen)
 - Add support for letter-spacing.
   Submitted by: Raymond Penners <raymond@duologix.nl>
+- text-decoration support for blocks (Christian Geisert)
+- Added inheritance for the text-decoration property from parent inline or
+  block elements (Christian Geisert)
 
 *** SVG
 - updated to cvs batik 3/12/2001 for api changes
@@ -56,6 +73,31 @@ remaining for content. (Karen Lease)
 *** FOTreeBuilder
 - fixed npe problem when text outside root element
 - handles document errors and unknown namespace better
+
+*** AWTRenderer
+- Fixed small border problem
+  Submitted by:	Ralph LaChance <Ralph_LaChance@compuserve.com>
+- Improved i18n support for AWT viewer (Japanese dialogs)
+  Submitted by: Satoshi Ishigami (ishigami@victokai.co.jp)
+
+
+*** TXTRenderer
+- Generated text is written in UTF-8 encoding instead of ISO-8859-1
+
+*** MIFRenderer
+- MIF output strings escaping (see bug #1332)
+  Submitted by: Vicente Salvador (vicentesalvador@netscape.net)
+- Fixed NoSuchElementException in MIF renderer (Christian Geisert)
+
+*** Hyphenation
+- Added Polish Hyphenation based on TeX hypenation
+  Submitted by: Marcin Kuthan [M.Kuthan@elka.pw.edu.pl]
+- Fixed infinite loop with hyphenation
+  Submitted by:	Enrico Schnepel <enrico.schnepel@gmx.de>
+- Added greek Hyphenation
+  Submitted by:	Dimitris Kamenopoulos <el97146@mail.ntua.gr>
+- Added hungarian Hyphenation
+  Submitted by:	Simon Geza <simon@mail.drotposta.hu>
 
 ==============================================================================
 Done since 0.20 release
