--- a/README
+++ b/README
@@ -3,7 +3,7 @@ FOP readme
     What is FOP?
     FOP is the world's first print formatter driven by XSL formatting
     objects. It is a Java application that reads a formatting object
-    tree conforming to the XSL candidate release (21. November 2000) and 
+    tree conforming to the XSL-FO Version 1.0 W3C Recommendation and 
     then turns it into a PDF document or allows you to preview it 
     directly on screen. 
     
@@ -21,6 +21,8 @@ FOP readme
 
     Discussion of Fop takes place in fop-dev@xml.apache.org (subscribe at 
     fop-dev-subscribe@xml.apache.org)
+    User questions should be sent to fop-user@xml.apache.org
+    Archives are available at: http://marc.theaimsgroup.com
 
     Before you post any questions, please have a look at the FAQ at 
     http://www.owal.co.uk:8090/asf/servlet/asf/
