Moved from org.apache.log.Logger to org.apache.avalon.framework.logger.Logger (this removes dependency from logkit) Submitted by: Michael Gratton <mjg@recalldesign.com>
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194706 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,11 @@
 ==============================================================================
+Done since 0.20.3 release
+
+- Moved from org.apache.log.Logger to org.apache.avalon.framework.logger.Logger
+  (this removes dependency from logkit)
+  Submitted by: Michael Gratton <mjg@recalldesign.com>
+
+==============================================================================
 Done since 0.20.2 release
 *** General
 - Added correct metrics for euro sign in standard fonts
