--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,8 @@ Done since 0.20.3 release
 - Moved from org.apache.log.Logger to org.apache.avalon.framework.logger.Logger
   (this removes dependency from logkit)
   Submitted by: Michael Gratton <mjg@recalldesign.com>
-
+- Updated ant to version 1.4.1 (Christian Geisert)
+  (ant-optional.jar is no longer needed)
 ==============================================================================
 Done since 0.20.2 release
 *** General
