--- a/CHANGES
+++ b/CHANGES
@@ -8,6 +8,10 @@ Done since 0.20.3 release
   (ant-optional.jar is no longer needed)
 - Changed build.sh to work under cygwin
   Submitted by: Andriy Palamarchuk <APalamar@wyeth.com>
+- Added turkish hyphenation patterns
+  Submitted by:	Togan Muftuoglu <toganm@users.sourceforge.net>
+- Aportuguese hyphenation patterns
+  Submitted by:	Paulo Soares <psoares@consiste.pt>
 ==============================================================================
 Done since 0.20.2 release
 *** General
