Added czech translation for AWT viewer Submitted by: Michal Buchtik <BuchtikM@dlsystem.cz>
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194761 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -9,9 +9,11 @@ Done since 0.20.3 release
 - Changed build.sh to work under cygwin
   Submitted by: Andriy Palamarchuk <APalamar@wyeth.com>
 - Added turkish hyphenation patterns
-  Submitted by:	Togan Muftuoglu <toganm@users.sourceforge.net>
-- Aportuguese hyphenation patterns
-  Submitted by:	Paulo Soares <psoares@consiste.pt>
+  Submitted by: Togan Muftuoglu <toganm@users.sourceforge.net>
+- Added portuguese hyphenation patterns
+  Submitted by: Paulo Soares <psoares@consiste.pt>
+- Added czech translation for AWT viewer
+  Submitted by: Michal Buchtik <BuchtikM@dlsystem.cz>
 ==============================================================================
 Done since 0.20.2 release
 *** General
