--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,8 @@ Done since 0.20.3 release
   Submitted by: Paulo Soares <psoares@consiste.pt>
 - Added czech translation for AWT viewer
   Submitted by: Michal Buchtik <BuchtikM@dlsystem.cz>
+- Added czech hyphenation patterns
+  Submitted by: Michal Buchtik <BuchtikM@dlsystem.cz>
 ==============================================================================
 Done since 0.20.2 release
 *** General
