--- a/CHANGES
+++ b/CHANGES
@@ -16,6 +16,8 @@ Done since 0.20.3 release
   Submitted by: Michal Buchtik <BuchtikM@dlsystem.cz>
 - Added czech hyphenation patterns
   Submitted by: Michal Buchtik <BuchtikM@dlsystem.cz>
+- Added support for background-image
+  Submitted by: Michael Gratton <mjg@recalldesign.com>
 ==============================================================================
 Done since 0.20.2 release
 *** General
