updated to batik1.5 beta 2
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194821 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -7,7 +7,7 @@ Ant is the scripting tool which is used to build Fop or to run
 the test scripts. see build.xml in root for more information
 
 batik.jar
-cvs 21/03/2002
+version 1.5beta2
 created from all-jar build target
 the svg library from Batik at xml.apache.org
 
