updated to batik1.5beta2 and improved the useragent usage
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/branches/fop-0_20_2-maintain@194822 13f79535-47bb-0310-9956-ffa450edef68

--- a/lib/readme
+++ b/lib/readme
@@ -5,7 +5,7 @@ ant.jar         Ant is the scripting tool which is used to build Fop or to run
                 the test scripts. see build.xml in root for more information
 
 batik.jar       the svg library from Batik at xml.apache.org
-
+version 1.5 beta2
 
 buildtools.jar  Ant tasks required for building FOP. Rebuild with 
                 build.sh -f buildtools.xml in the top level directory.
